# daflytics

./: .gitignore  .terraform.lock.hcl  README.md  main.tf  response.json
rentextract/: build.py  pyproject.toml  requirements.txt
rentextract/rentextract/: lambda.py  main.py
rentextract/tests/: test_lambda.py  test_rentextract.py
rentsearch/: build.py  pyproject.toml
rentsearch/lambda/: lambda.py
rentsearch/rentsearch/: lambda.py  main.py
rentsearch/tests/: test_rentsearch.py
