[tool.poetry]
name = "rentsearch"
version = "0.1.0"
description = ""
authors = ["Shane Nolan <shanemichealnolan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
boto3 = "^1.18.62"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
